--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     </head>
     <body>
-        <h1>How to start</h1>
-        <p>Start a terminal in your codespace.</p>
+        <h1>You did it!</h1>
+        <p>You have successfully started the webserver.</p>
     </body>
 </html>
